Update configuration page - change Power Level to Polarity

--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -929,12 +929,12 @@
         </div>
           <div class="large-4 columns">
             <div class="row collapse">
-              <label>Power Level</label>
+              <label>Polarity</label>
               <div class="small-9 columns">
-                <input type="text" id="driver_1pl" class="driver_input" />
+                <input type="text" id="driver_1po" class="driver_input" />
               </div>
               <div class="small-3 columns">
-                <span class="postfix">(0-1.0)</span>
+                <span class="postfix">(0-CW, 1-CCW)</span>
               </div>
             </div>
         </div>
@@ -992,12 +992,12 @@
           </div>
           <div class="large-4 columns">
             <div class="row collapse">
-              <label>Power Level</label>
+              <label>Polarity</label>
               <div class="small-9 columns">
-                <input type="text" id="driver_2pl" class="driver_input" />
+                <input type="text" id="driver_2po" class="driver_input" />
               </div>
               <div class="small-3 columns">
-                <span class="postfix">(0-1.0)</span>
+                <span class="postfix">(0-CW, 1-CCW)</span>
               </div>
             </div>
           </div>
@@ -1054,12 +1054,12 @@
           </div>
           <div class="large-4 columns">
             <div class="row collapse">
-              <label>Power Level</label>
+              <label>Polarity</label>
               <div class="small-9 columns">
-                <input type="text" id="driver_3pl" class="driver_input" />
+                <input type="text" id="driver_3po" class="driver_input" />
               </div>
               <div class="small-3 columns">
-                <span class="postfix">(0-1.0)</span>
+                <span class="postfix">(0-CW, 1-CCW)</span>
               </div>
             </div>
           </div>
@@ -1116,12 +1116,12 @@
           </div>
             <div class="large-4 columns">
               <div class="row collapse">
-                <label>Power Level</label>
+                <label>Polarity</label>
                 <div class="small-9 columns">
-                  <input type="text" id="driver_4pl" class="driver_input" />
+                  <input type="text" id="driver_4po" class="driver_input" />
                 </div>
                 <div class="small-3 columns">
-                  <span class="postfix">(0-1.0)</span>
+                  <span class="postfix">(0-CW, 1-CCW)</span>
                 </div>
               </div>
          </div>
@@ -1178,12 +1178,12 @@
           </div>
             <div class="large-4 columns">
               <div class="row collapse">
-                <label>Power Level</label>
+                <label>Polarity</label>
                 <div class="small-9 columns">
-                  <input type="text" id="driver_5pl" class="driver_input" />
+                  <input type="text" id="driver_5po" class="driver_input" />
                 </div>
                 <div class="small-3 columns">
-                  <span class="postfix">(0-1.0)</span>
+                  <span class="postfix">(0-CW, 1-CCW)</span>
                 </div>
               </div>
          </div>
@@ -1240,12 +1240,12 @@
           </div>
             <div class="large-4 columns">
               <div class="row collapse">
-                <label>Power Level</label>
+                <label>Polarity</label>
                 <div class="small-9 columns">
-                  <input type="text" id="driver_6pl" class="driver_input" />
+                  <input type="text" id="driver_6po" class="driver_input" />
                 </div>
                 <div class="small-3 columns">
-                  <span class="postfix">(0-1.0)</span>
+                  <span class="postfix">(0-CW, 1-CCW)</span>
                 </div>
               </div>
          </div>
