--- a/dashboard/apps/configuration.fma/index.html
+++ b/dashboard/apps/configuration.fma/index.html
@@ -406,13 +406,8 @@
         </div>
       </fieldset>
     </div>
-
-
-
-
-
-
   </section>
+
   <section role="tabpanel" aria-hidden="true" class="content" id="tabpanel2">
       <div class="row">
         <fieldset>
@@ -938,7 +933,20 @@
               </div>
             </div>
         </div>
-
+        <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Axis
+                <select id="driver_1ma" class="driver_input">
+                  <option value="0">X</option>
+                  <option value="1">Y</option>
+                  <option value="2">Z</option>
+                  <option value="3">A</option>
+                  <option value="4">B</option>
+                  <option value="5">C</option>
+                </select>
+              </label>
+            </div>
+          </div>        
         </fieldset>
       </div>
   
@@ -1001,6 +1009,20 @@
               </div>
             </div>
           </div>
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Axis
+                <select id="driver_2ma" class="driver_input">
+                  <option value="0">X</option>
+                  <option value="1">Y</option>
+                  <option value="2">Z</option>
+                  <option value="3">A</option>
+                  <option value="4">B</option>
+                  <option value="5">C</option>
+                </select>
+              </label>
+            </div>
+          </div>        
         </fieldset>
       </div>
 
@@ -1063,6 +1085,20 @@
               </div>
             </div>
           </div>
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Axis
+                <select id="driver_3ma" class="driver_input">
+                  <option value="0">X</option>
+                  <option value="1">Y</option>
+                  <option value="2">Z</option>
+                  <option value="3">A</option>
+                  <option value="4">B</option>
+                  <option value="5">C</option>
+                </select>
+              </label>
+            </div>
+          </div>        
         </fieldset>
       </div>
 
@@ -1124,7 +1160,21 @@
                   <span class="postfix">(0-CW, 1-CCW)</span>
                 </div>
               </div>
-         </div>
+          </div>
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Axis
+                <select id="driver_4ma" class="driver_input">
+                  <option value="0">X</option>
+                  <option value="1">Y</option>
+                  <option value="2">Z</option>
+                  <option value="3">A</option>
+                  <option value="4">B</option>
+                  <option value="5">C</option>
+                </select>
+              </label>
+            </div>
+          </div>        
         </fieldset>
      </div>
 
@@ -1176,17 +1226,31 @@
               </label>
             </div>
           </div>
-            <div class="large-4 columns">
-              <div class="row collapse">
-                <label>Polarity</label>
-                <div class="small-9 columns">
-                  <input type="text" id="driver_5po" class="driver_input" />
-                </div>
-                <div class="small-3 columns">
-                  <span class="postfix">(0-CW, 1-CCW)</span>
-                </div>
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Polarity</label>
+              <div class="small-9 columns">
+                <input type="text" id="driver_5po" class="driver_input" />
               </div>
-         </div>
+              <div class="small-3 columns">
+                <span class="postfix">(0-CW, 1-CCW)</span>
+              </div>
+            </div>
+          </div>
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Axis
+                <select id="driver_5ma" class="driver_input">
+                  <option value="0">X</option>
+                  <option value="1">Y</option>
+                  <option value="2">Z</option>
+                  <option value="3">A</option>
+                  <option value="4">B</option>
+                  <option value="5">C</option>
+                </select>
+              </label>
+            </div>
+          </div>        
         </fieldset>
      </div>
 
@@ -1238,20 +1302,33 @@
               </label>
             </div>
           </div>
-            <div class="large-4 columns">
-              <div class="row collapse">
-                <label>Polarity</label>
-                <div class="small-9 columns">
-                  <input type="text" id="driver_6po" class="driver_input" />
-                </div>
-                <div class="small-3 columns">
-                  <span class="postfix">(0-CW, 1-CCW)</span>
-                </div>
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Polarity</label>
+              <div class="small-9 columns">
+                <input type="text" id="driver_6po" class="driver_input" />
               </div>
-         </div>
+              <div class="small-3 columns">
+                <span class="postfix">(0-CW, 1-CCW)</span>
+              </div>
+            </div>
+          </div>
+          <div class="large-4 columns">
+            <div class="row collapse">
+              <label>Axis
+                <select id="driver_6ma" class="driver_input">
+                  <option value="0">X</option>
+                  <option value="1">Y</option>
+                  <option value="2">Z</option>
+                  <option value="3">A</option>
+                  <option value="4">B</option>
+                  <option value="5">C</option>
+                </select>
+              </label>
+            </div>
+          </div>        
         </fieldset>
      </div>
-
   </section>
 
 </section>
