removed left hamburger

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -14,8 +14,9 @@
 
   <!-- Body of the page -->
   <body>
-              <div id="spinner"></div>
-
+     
+<div id="spinner"></div>
+   <div class="collapseLeft"></div>
       <div id="main" class="off-canvas-wrap" data-offcanvas>
         <div class="inner-wrap">
 
@@ -24,9 +25,7 @@
           <nav class="tab-bar">
  
             <!-- ***** Left-Menu Button Section ***** -->
-            <section class="left-small left show-for-small-only">
-              <a class="left-off-canvas-toggle menu-icon" href="#"><span></span></a>
-            </section>
+
 
             <section class="show-for-medium-up fabmo-status" id="left-position-container">
               <div class="small-6 columns">
@@ -190,7 +189,7 @@
             <div class="clear"></div>
           </section>
 
-          <a id="close_menu" class="exit-off-canvas"></a>
+     
         </div>
       </div>
 
