creating stop button on bottom

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -19,7 +19,14 @@
    <div class="collapseLeft"></div>
       <div id="main" class="off-canvas-wrap" data-offcanvas>
         <div class="inner-wrap">
-
+   
+          <div class="footBar">
+            <div class="footTab">
+              <hr>
+              <hr>
+            </div>  
+            <div class='stopJob'>STOP</div>
+          </div>
           <!-- New nav work -->
           <!-- Nav-Bar & Buttons for sliding menus -->
           <nav class="tab-bar">
@@ -185,10 +192,19 @@
           <section class="main-section" style="display:none;">
             <div id="navbar_container"></div>
             <div id="modal_container" style="display:none;"></div>
-            <div id="app-client-container"></div>
+            <div id="app-client-container">
+            <div class='footBar'>
+              <div class='footTab'>
+                <hr>
+                <hr>
+                <hr>
+              </div>
+            </div>
+            </div>
+            </div>
             <div class="clear"></div>
           </section>
-
+       
      
         </div>
       </div>
