functional stop button and progress bar in footer

--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -400,6 +400,7 @@
 		fabmoDashboard.runNext(function(err, data) {
 			refresh_jobs_list();
 			fabmoDashboard.showDRO();
+			fabmoDashboard.showFooter();
 		});
 	});
 
