--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -20,12 +20,46 @@
       <div id="main" class="off-canvas-wrap" data-offcanvas>
         <div class="inner-wrap">
    
-          <div class="footBar">
+          <div class="footBar fabmo-file-control">
             <div class="footTab">
               <hr>
               <hr>
-            </div>  
-            <div class='stopJob'>STOP</div>
+            </div>
+              <ul id="loadbar">
+                <li>
+                  <div id="layerFill1" class="bar"></div> <!-- Control Layer + Bar  -->
+                </li>
+                <li>
+                  <div id="layerFill2" class="bar"></div>
+                </li>
+                <li>
+                  <div id="layerFill3" class="bar"></div>
+                </li>
+                <li>
+                  <div id="layerFill4" class="bar"></div>
+                </li>
+                <li>
+                  <div id="layerFill5" class="bar"></div>
+                </li>
+                <li>
+                  <div id="layerFill6" class="bar"></div>
+                </li>
+                <li>
+                  <div id="layerFill7" class="bar"></div>
+                </li>
+                <li>
+                  <div id="layerFill8" class="bar"></div>
+                </li>
+                <li>
+                  <div id="layerFill9" class="bar"></div>
+                </li>
+                <li>
+                  <div id="layerFill10" class="bar"></div>
+                </li>
+              </ul>  
+          <span class='fabmo-stop-button'>
+            <a class='stopJob'>STOP</a>
+          </span>
           </div>
           <!-- New nav work -->
           <!-- Nav-Bar & Buttons for sliding menus -->
