adding running job title to footer

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -21,10 +21,12 @@
         <div class="inner-wrap">
    
           <div class="footBar fabmo-file-control">
+
             <div class="footTab">
               <hr>
               <hr>
             </div>
+            <span class="currentJobTitle"></span>
               <ul id="loadbar">
                 <li>
                   <div id="layerFill1" class="bar"></div> <!-- Control Layer + Bar  -->
