adding run next to bottom bar

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -26,6 +26,17 @@
               <hr>
               <hr>
             </div>
+            <div class='startNextContainer'>
+              <span class='startnextLabel'>
+                Next Job:
+              </span>
+              <span class='nextJob'>
+                This is the next Job
+              </span>
+              <div class="playContainer">
+                <div  title="Next Job" class="play"></div>
+              </div>
+            </div>  
             <span class="currentJobTitle"></span>
               <ul id="loadbar">
                 <li>
@@ -281,6 +292,7 @@
         var spinner = new Spinner(opts).spin(target);
       </script>
       <script type="text/javascript" src="js/libs/require.js"></script>
+      <script src="/js/libs/dashboard.js"></script>
       <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
