can run next from the footer does not refresh job manager

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -31,10 +31,10 @@
                 Next Job:
               </span>
               <span class='nextJob'>
-                This is the next Job
               </span>
               <div class="playContainer">
                 <div  title="Next Job" class="play"></div>
+                <a title="Submit Job" href="#/app/job-manager" class='gotoJobManager'>&uArr;</a>
               </div>
             </div>  
             <span class="currentJobTitle"></span>
