adding percent to progress bar

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -38,6 +38,7 @@
               </div>
             </div>  
             <span class="currentJobTitle"></span>
+            <span class="percentComplete"></span>
               <ul id="loadbar">
                 <li>
                   <div id="layerFill1" class="bar"></div> <!-- Control Layer + Bar  -->
