trying to add marquee

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -37,7 +37,9 @@
                 <a title="Submit Job" href="#/app/job-manager" class='gotoJobManager'>&uArr;</a>
               </div>
             </div>  
-            <span class="currentJobTitle"></span>
+            <div class="currentContainer">
+              <span class="currentJobTitle"></span>
+            </div>
             <span class="percentComplete"></span>
               <ul id="loadbar">
                 <li>
