--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -138,7 +138,7 @@
                             <span class="posx pos doselect"></span>
                           </label>
                         </div>
-                        <div class="small-3 columns home"><span class="button-zerox">X<label>0</label></span></div>
+                        <div class="small-3 columns home"><span class="button-zerox">0</span></div>
                     </div>
                   </form>
                   <form>
@@ -150,7 +150,7 @@
                         <span class="posy pos doselect"></span>
                         </label>
                       </div>
-                      <div class="small-3 columns home"><span class="button-zeroy">Y<label>0</label></span></div>
+                      <div class="small-3 columns home"><span class="button-zeroy">0</span></div>
                     </div>
                   </form>
                   <form>
@@ -162,7 +162,7 @@
                         <span class="posz pos doselect"></span>
                         </label>
                       </div>
-                      <div class="small-3 columns home"><span class="button-zeroz">Z<label>0</label></span></div>
+                      <div class="small-3 columns home"><span class="button-zeroz">0</span></div>
                     </div>
                   </form>
                 </li>
