--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -192,7 +192,7 @@
               </ul>
             </div>
             <div id="handwheel" class="widget fabmo-manual-control" style="text-align: center;">
-              <canvas width="220" height="220" id="wheel"></canvas>
+              <canvas width="220px" height="220px" id="wheel"></canvas>
             </div>
             <ul class="off-canvas-list fabmo-status fabmo-file-control">
                 <li style="margin: 10px" class="file-info" style="align: center;">
