adding marquee at small screen sizes

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -38,7 +38,7 @@
               </div>
             </div>  
             <div class="currentContainer">
-              <span class="currentJobTitle"></span>
+              <span class="currentJobTitle" id="marquee"></span>
             </div>
             <span class="percentComplete"></span>
               <ul id="loadbar">
