Improve appearance of disconnect dialog

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -265,10 +265,10 @@
         <a class="close-reveal-modal">&#215;</a>
       </div>
 
-      <div id="disconnectDialog" class="reveal-modal" data-reveal aria-labelledby="disconnectDialogTitle" aria-hidden="true" role="dialog" data-options="close_on_background_click:false; close_on_esc:false;">
+      <div id="disconnectDialog" class="reveal-modal small" data-reveal aria-labelledby="disconnectDialogTitle" aria-hidden="true" role="dialog" data-options="close_on_background_click:false; close_on_esc:false;">
           <div id="waiting_spinner" style="width: 75px; height: 75px; position: relative; float: left;"></div>
           <div style="vertical-align: middle; height: 75px; display: table-cell; padding: 10px;"> 
-          <span style="font-weight: bold;">Waiting for your machine...</span>
+          <span style="font-weight: bold;">Waiting for FabMo...</span>
           </div>
       </div>
 
