--- a/dashboard/apps/job_manager.fma/index.html
+++ b/dashboard/apps/job_manager.fma/index.html
@@ -349,6 +349,7 @@
 					$('#nav-pending').click();
 					refresh_jobs_list();
 				});
+				$('.dropDownWrapper').hide();
 			});
 			$('.dropDown').on('click', 'a#preview-'+job._id.toString(), function(e) {
 				fabmoDashboard.launchApp('previewer', {'job' : job._id});
