adding desktop progress bar

--- a/dashboard/static/index.html
+++ b/dashboard/static/index.html
@@ -52,43 +52,18 @@
               <div class="shadow"></div>
             </div>
             <div class="inset">
-              <div class="percentage">1%</div>
+              <div class="percentage"></div>
             </div>
           </div>
-            <!--<span class="percentComplete"></span>
-              <ul id="loadbar">
-                <li>
-                  <div id="layerFill1" class="bar"></div>
-                </li>
-                <li>
-                  <div id="layerFill2" class="bar"></div>
-                </li>
-                <li>
-                  <div id="layerFill3" class="bar"></div>
-                </li>
-                <li>
-                  <div id="layerFill4" class="bar"></div>
-                </li>
-                <li>
-                  <div id="layerFill5" class="bar"></div>
-                </li>
-                <li>
-                  <div id="layerFill6" class="bar"></div>
-                </li>
-                <li>
-                  <div id="layerFill7" class="bar"></div>
-                </li>
-                <li>
-                  <div id="layerFill8" class="bar"></div>
-                </li>
-                <li>
-                  <div id="layerFill9" class="bar"></div>
-                </li>
-                <li>
-                  <div id="layerFill10" class="bar"></div>
-                </li>
-              </ul> -->
-    
+          
+          <div class="load_container">
+              <div class="loading_bar">
+                <div class="horizontal_fill">
+                </div>
+              </div>
+              <div class="percent_comp">10%</div>
+           </div>
+ 
           <span class='fabmo-stop-button'>
             <a class='stopJob'>STOP</a>
           </span>
